Corrected overlapping of button and link

--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@ html, body, #root {
   }
   .hamburger-content {
     position: absolute;
-    width: 30%;
+    width: 60%;
     height: 100%;
     right: 0%;
     top:0;
